# UiT

Game_design/: CMakeLists.txt  cone.cpp  cone.h  cylinder.cpp  cylinder.h  guiapplication.cpp  guiapplication.h  pbeziersurfdatastructure.h  pbeziersurfstructure.h  plane.cpp  plane.h  scenario.cpp  scenario.h  sphere.cpp  sphere.h  testtorus.cpp  testtorus.h
Game_design/gmlibsceneloader/: colorstructure.cpp  colorstructure.h  enabledefaultvisualizerstructure.cpp  enabledefaultvisualizerstructure.h  gmlibsceneloaderdatadescription.cpp  gmlibsceneloaderdatadescription.h  gmlibversionstructure.cpp  gmlibversionstructure.h  materialstructure.cpp  materialstructure.h  pbeziersurfdatastructure.cpp  pbeziersurfdatastructure.h  pbeziersurfstructure.h  pcylinderdatastructure.cpp  pcylinderdatastructure.h  pcylinderstructure.cpp  pcylinderstructure.h  pplanedatastructure.cpp  pplanedatastructure.h  pplanestructure.cpp  pplanestructure.h  propertystructure.cpp  propertystructure.h  pspheredatastructure.cpp  pspheredatastructure.h  pspherestructure.cpp  pspherestructure.h  psurfdatastructure.cpp  psurfdatastructure.h  psurfstructure.cpp  psurfstructure.h  ptorusdatastructure.cpp  ptorusdatastructure.h  ptorusstructure.cpp  ptorusstructure.h  replotstructure.cpp  replotstructure.h  sceneobjectdatastructure.cpp  sceneobjectdatastructure.h  sceneobjectstructure.cpp  (+15 more)
GeomatricModelling/: CMakeLists.txt  beizercurves.c  beizercurves.h  beizevaluater.c  beizevaluater.h  firstcurve.c  firstcurve.h  firstsubcurve.c  firstsubcurve.h  gerbscurve.c  gerbscurve.h  knotvector.c  knotvector.h  scenario.cpp  scenario.h
GeomatricModelling/application/: guiapplication.cpp  guiapplication.h
GeomatricModelling/hidmanager/: curve.h  defaulthidmanager.cpp  defaulthidmanager.h
MagnifierApplication/: PlayerApp.pro  PlayerApp.pro.user.y14324  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h
fluidmechanics/: BattleField.cpp  BattleField.hpp  Camera.cpp  Camera.hpp  GameManager.cpp  GameManager.hpp  Input.hpp  ParticleGen.cpp  ParticleGen.hpp  SceneObject.cpp  Shader.cpp  Shader.hpp  Shape.cpp  Shape.hpp  datahandler.cpp  datahandler.hpp  fluidSimulation.sln  fluidSimulation.vcxproj  fluidSimulation.vcxproj.filters  main.cpp  model.cpp  model.hpp  sceneobject.hpp
fluidmechanics/Debug/: fluidSimulation.ilk  vc140.idb
fluidmechanics/Debug/fluidSimulation.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  fluidSimulation.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
fluidmechanics/Shader/: Phong.frag  Phong.vert  battlefield.frag  battlefield.vert  red.frag  skyBox.frag  skyBox.vert  water.frag  water.vert
fluidmechanics/gfx/: lifeboat.mtl
virtual2/: CMakeLists.txt  controller.cpp  controller.h  frame.cpp  frame.h  motor.cpp  motor.h  motorpart.cpp  motorpart.h  object.cpp  object.h  quadcopter.cpp  quadcopter.h  scenario.cpp  scenario.h  sphere.h  terrain.cpp  terrain.h  testtorus.h  texloader.cpp  texloader.h
virtual2/application/: guiapplication.cpp  guiapplication.h
virtual2/application/qml/: main.qml
virtual2/hidmanager/: defaulthidmanager.cpp  defaulthidmanager.h
virtual2/resources/shaders/: model.frag  model.vert
